<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".activities.MainActivity"
    android:background="@drawable/ic_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/llPadding">

        <TextView
            android:id="@+id/tvQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/questionsMargin"
            android:text="What is this?"
            android:textSize="@dimen/questionTextSize"
            android:textStyle="bold"
            android:textColor="@color/teal_700"/>

        <ImageView
            android:id="@+id/ivImage"
            android:layout_width="250dp"
            android:layout_height="160dp"
            android:scaleType="fitCenter"/>

        <LinearLayout
            android:id="@+id/ll_progress_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/llProgressDetails"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="10"
                android:minHeight="50dp"
                android:progress="0"
                android:indeterminate="false"/>

            <TextView
                android:id="@+id/tv_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/tvProgressPadding"
                android:textColorHint="#7A8089"
                android:textSize="@dimen/tvProgressTextSize"
                android:text="0/10"
                android:textColor="@color/teal_700"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_option_1"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:gravity="center"
            android:padding="@dimen/answerPadding"
            android:text="@string/tv_option_1"
            android:textSize="@dimen/tvOptionSize"
            android:background="@drawable/question_button_background"/>

        <TextView
            android:id="@+id/tv_option_2"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:gravity="center"
            android:padding="@dimen/answerPadding"
            android:text="@string/tv_option_2"
            android:textSize="@dimen/tvOptionSize"
            android:background="@drawable/question_button_background"/>

        <TextView
            android:id="@+id/tv_option_3"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:gravity="center"
            android:padding="@dimen/answerPadding"
            android:text="@string/tv_option_3"
            android:textSize="@dimen/tvOptionSize"
            android:background="@drawable/question_button_background"/>

        <TextView
            android:id="@+id/tv_option_4"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:gravity="center"
            android:padding="@dimen/answerPadding"
            android:text="@string/tv_option_4"
            android:textSize="@dimen/tvOptionSize"
            android:background="@drawable/question_button_background"/>

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/btnSubmit"
            android:textSize="16sp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:textColor="@color/white"
            android:background="@drawable/question_button_background"/>

    </LinearLayout>

</ScrollView>